--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" style="background-color: lightgrey" >
+	<body data-sveltekit-preload-data="hover" style="overflow: hidden" class="bg-background/90" >
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
