--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,34 @@
 <html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Primary Meta Tags -->
+    <title>Level maker | 02285 Artificial Intelligence and Multi-Agent Systems</title>
+    <meta name="title" content="Level maker | 02285 Artificial Intelligence and Multi-Agent Systems" />
+    <meta name="description" content="Create, modify, and visualize levels for the hospital domain in the DTU course: 02285 Artificial Intelligence and Multi-Agent Systems. " />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="mas-lvlr.vercel.app" />
+    <meta property="og:title" content="Level maker | 02285 Artificial Intelligence and Multi-Agent Systems" />
+    <meta property="og:description" content="Create, modify, and visualize levels for the hospital domain in the DTU course: 02285 Artificial Intelligence and Multi-Agent Systems. " />
+    <meta property="og:image" content="/meta-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="mas-lvlr.vercel.app" />
+    <meta property="twitter:title" content="Level maker | 02285 Artificial Intelligence and Multi-Agent Systems" />
+    <meta property="twitter:description" content="Create, modify, and visualize levels for the hospital domain in the DTU course: 02285 Artificial Intelligence and Multi-Agent Systems. " />
+    <meta property="twitter:image" content="/meta-image.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>02285 - MAS-LVLR</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" style="overflow: hidden" class="bg-background/90" >
